--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -18,8 +18,10 @@
         <nav class="flex space-x-4">
             <a href="/dashboard" class="text-blue-500 hover:text-blue-700 transition duration-150 ease-in-out">Dashboard</a>
             <a href="/orderbook" class="text-blue-500 hover:text-blue-700 transition duration-150 ease-in-out">Orderbook</a>
+            <a href="/tradebook" class="text-blue-500 hover:text-blue-700 transition duration-150 ease-in-out">Tradebook</a>
+            <a href="/positions" class="text-blue-500 hover:text-blue-700 transition duration-150 ease-in-out">Positions</a>
             <a href="/download" class="text-blue-500 hover:text-blue-700 transition duration-150 ease-in-out">Download</a>
-            <a href="/token" class="text-blue-500 hover:text-blue-700 transition duration-150 ease-in-out">Search</a>
+            <a href="/token" class="text-blue-500 hover:text-blue-700 transition duration-150 ease-in-out">Tokens</a>
             <a href="/logout" class="text-blue-500 hover:text-blue-700 transition duration-150 ease-in-out">Logout</a>
         </nav>
     </div>
