modified:   api/templates/dashboard.html modified:   api/templates/index.html

--- a/api/templates/dashboard.html
+++ b/api/templates/dashboard.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block head %}
-    <title>AlgoBridge Dashboard</title>
+    <title>OpenAlgo Dashboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
@@ -13,6 +13,6 @@
 
 {% block content %}
 <body class="bg-gray-100 flex justify-center items-center h-screen">
-    <h1 class="text-3xl font-medium text-gray-800">Welcome to AlgoBridge Dashboard</h1>
+    <h1 class="text-3xl font-medium text-gray-800">Welcome to OpenAlgo Dashboard</h1>
 </body>
 {% endblock %}
