modified:   api/index.py modified:   api/templates/base.html

--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -28,5 +28,9 @@
     <div class="container mx-auto mt-20">
         {% block content %}{% endblock %}
     </div>
+    <!-- Footer -->
+    <footer class="bg-white text-center py-4 shadow-lg fixed bottom-0 left-0 right-0">
+        <p>© Copyright 2024 | <a href="https://www.openalgo.in" class="text-blue-500 hover:text-blue-700 transition duration-150 ease-in-out" target="_blank">www.openalgo.in</a> | Open Source Algo Platform for Everyone</p>
+    </footer>
 </body>
 </html>
