--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -11,6 +11,20 @@
             font-family: 'Open Sans', sans-serif;
         }
     </style>
+
+    <!-- Favicon and touch icons for various devices -->
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='apple-touch-icon.png') }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='favicon-32x32.png') }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='favicon-16x16.png') }}">
+    <link rel="manifest" href="{{ url_for('static', filename='site.webmanifest') }}">
+    <link rel="mask-icon" href="{{ url_for('static', filename='safari-pinned-tab.svg') }}" color="#5bbad5">
+    
+    <!-- Meta tags for color settings on mobile browsers -->
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+        
+
     {% block head %}{% endblock %}
 </head>
 <body class="bg-gray-100">
