--- a/api/templates/dashboard.html
+++ b/api/templates/dashboard.html
@@ -4,13 +4,13 @@
 <div class="py-8">
     <div class="flex flex-wrap -m-4">
         <div class="w-full px-4">
-            <div class="text-2xl font-semibold text-gray-700 mb-2">
+            <div class="text-2xl font-semibold text-gray-700 mb-2 text-center sm:text-left">
                 OpenAlgo Trading Dashboard
             </div>
             <div class="bg-white p-5 rounded-lg shadow-lg">
                 <div class="flex flex-wrap -m-4 text-center">
-                    <div class="p-4 md:w-1/5">
-                        <div class="border-2 border-blue-500 rounded-lg p-4">
+                    <div class="p-4 w-full sm:w-1/5">
+                        <div class="border-2 border-blue-500 rounded-lg p-4 h-full flex flex-col justify-between">
                             <div class="text-lg text-blue-700 font-medium">
                                 {{ margin_data['availablecash'] }}
                             </div>
@@ -19,8 +19,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="p-4 md:w-1/5">
-                        <div class="border-2 border-green-500 rounded-lg p-4">
+                    <div class="p-4 w-full sm:w-1/5">
+                        <div class="border-2 border-green-500 rounded-lg p-4 h-full flex flex-col justify-between">
                             <div class="text-lg text-green-700 font-medium">
                                 {{ margin_data['collateral'] }}
                             </div>
@@ -29,8 +29,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="p-4 md:w-1/5">
-                        <div class="border-2 border-yellow-500 rounded-lg p-4">
+                    <div class="p-4 w-full sm:w-1/5">
+                        <div class="border-2 border-yellow-500 rounded-lg p-4 h-full flex flex-col justify-between">
                             <div class="text-lg text-yellow-700 font-medium">
                                 {{ margin_data['m2munrealized'] }}
                             </div>
@@ -39,8 +39,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="p-4 md:w-1/5">
-                        <div class="border-2 border-red-500 rounded-lg p-4">
+                    <div class="p-4 w-full sm:w-1/5">
+                        <div class="border-2 border-red-500 rounded-lg p-4 h-full flex flex-col justify-between">
                             <div class="text-lg text-red-700 font-medium">
                                 {{ margin_data['m2mrealized'] }}
                             </div>
@@ -49,8 +49,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="p-4 md:w-1/5">
-                        <div class="border-2 border-gray-500 rounded-lg p-4">
+                    <div class="p-4 w-full sm:w-1/5">
+                        <div class="border-2 border-gray-500 rounded-lg p-4 h-full flex flex-col justify-between">
                             <div class="text-lg text-gray-700 font-medium">
                                 {{ margin_data['utiliseddebits'] }}
                             </div>
