--- a/api/templates/dashboard.html
+++ b/api/templates/dashboard.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="py-8">
+<div class="pt-1">
     <div class="flex flex-wrap -m-4">
         <div class="w-full px-4">
             <div class="text-2xl font-semibold text-gray-700 mb-2 text-center sm:text-left">
