modified:   templates/search.html

--- a/templates/search.html
+++ b/templates/search.html
@@ -43,7 +43,7 @@
         </table>
     </div>
     <div class="text-center mt-4">
-        <a href="/token" class="text-blue-500 hover:underline">New search</a>
+        <a href="{{ url_for('search_bp.token') }}" class="text-blue-500 hover:underline">New search</a>
     </div>
 </div>
 {% endblock %}
