--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OpenAlgo</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            var socket = io.connect(location.protocol + '//' + document.domain + ':' + location.port);
+
+            socket.on('order_event', function(data) {
+                var bgColorClass = data.action === 'sell' ? 'bg-red-500' : 'bg-green-500';
+                var flashMessage = document.createElement('div');
+                flashMessage.className = `fixed bottom-3 right-3 md:bottom-5 md:right-5 ${bgColorClass} text-white py-2 px-4 rounded-lg text-sm`;
+                flashMessage.textContent = `${data.action.toUpperCase()} Order Placed for the Symbol: ${data.symbol} Orderid : ${data.orderid}`;
+                document.body.appendChild(flashMessage);
+                setTimeout(function() {
+                    document.body.removeChild(flashMessage);
+                }, 5000);
+            });
+        });
+    </script>
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
