modified:   templates/tradingview.html

--- a/templates/tradingview.html
+++ b/templates/tradingview.html
@@ -84,7 +84,8 @@
     <!-- Tradingview Webhook URL Information -->
     <div id="webhook-info" class="bg-green-100 border-l-4 border-green-500 text-green-700 p-4 my-4" role="alert">
         <p class="font-bold">Tradingview Webhook URL</p>
-        <p>https://ngrok_hosted_domain/api/placesmartorder</p>
+        <p>https://your_ngrok_hosted_domain/api/placesmartorder</p>
+        <p>Ensure in the .env file NGROK_ALLOW = 'TRUE' and NGROK domain config is set</p>
     </div>
 
     <div id="json-output-container">
