modified:   templates/index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explore OpenAlgo, your gateway to advanced algorithmic trading. Our platform offers a seamless integration of real-time market data, sophisticated trading algorithms, and a user-friendly interface designed for both novice and experienced traders. Unlock the potential of automated trading strategies, optimize your portfolio, and gain insights into market trends with OpenAlgo. Start your journey towards smarter, more efficient trading today.">
+    <meta name="description" content="Explore OpenAlgo, your gateway to advanced algorithmic trading. Our platform offers a seamless integration with sophisticated trading algorithms, and a user-friendly interface designed for both novice and experienced traders. Unlock the potential of automated trading strategies with OpenAlgo. Start your journey towards smarter, more efficient trading today.">
 
     <!-- Page Title & Favicon -->
     <title>OpenAlgo - OpenSource Algo Platform for Everyone</title>
