--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,29 @@
                 }, 5000);
             });
 
+            // Listener for Cancel Order Events
+            socket.on('cancel_order_event', function(data) {
+                var flashMessage = document.createElement('div');
+                flashMessage.className = 'fixed bottom-3 right-3 md:bottom-5 md:right-5 bg-black-500 text-white py-2 px-4 rounded-lg text-sm';
+                flashMessage.textContent = `Cancel Order ID : ${data.orderid}`;
+                document.body.appendChild(flashMessage);
+                alertSound.play(); // Play the alert sound
+                setTimeout(function() {
+                    document.body.removeChild(flashMessage);
+                }, 5000);
+            });
+
+            socket.on('modify_order_event', function(data) {
+                var flashMessage = document.createElement('div');
+                flashMessage.className = 'fixed bottom-3 right-3 md:bottom-5 md:right-5 bg-black-500 text-white py-2 px-4 rounded-lg text-sm';
+                flashMessage.textContent = `Cancel Order ID : ${data.orderid}`;
+                document.body.appendChild(flashMessage);
+                alertSound.play(); // Play the alert sound
+                setTimeout(function() {
+                    document.body.removeChild(flashMessage);
+                }, 5000);
+            });
+
             // Listener for master contract download events
             socket.on('close_position', function(data) {
                 var flashMessage = document.createElement('div');
