--- a/templates/base.html
+++ b/templates/base.html
@@ -9,72 +9,9 @@
     <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
     <audio id="alert-sound" src="{{ url_for('static', filename='sounds/alert.mp3') }}" preload="auto"></audio>
 
+    <script src="{{ url_for('static', filename='js/socket-events.js') }}"></script>
+
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            var socket = io.connect(location.protocol + '//' + document.domain + ':' + location.port);
-            var alertSound = document.getElementById('alert-sound');
-    
-            // Listener for master contract download events
-            socket.on('master_contract_download', function(data) {
-                var flashMessage = document.createElement('div');
-                flashMessage.className = 'fixed bottom-3 right-3 md:bottom-5 md:right-5 bg-blue-500 text-white py-2 px-4 rounded-lg text-sm';
-                flashMessage.textContent = `Master Contract: ${data.message}`;
-                document.body.appendChild(flashMessage);
-                alertSound.play(); // Play the alert sound
-                setTimeout(function() {
-                    document.body.removeChild(flashMessage);
-                }, 5000);
-            });
-
-            // Listener for Cancel Order Events
-            socket.on('cancel_order_event', function(data) {
-                var flashMessage = document.createElement('div');
-                flashMessage.className = 'fixed bottom-3 right-3 md:bottom-5 md:right-5 bg-black-500 text-white py-2 px-4 rounded-lg text-sm';
-                flashMessage.textContent = `Cancel Order ID : ${data.orderid}`;
-                document.body.appendChild(flashMessage);
-                alertSound.play(); // Play the alert sound
-                setTimeout(function() {
-                    document.body.removeChild(flashMessage);
-                }, 5000);
-            });
-
-            socket.on('modify_order_event', function(data) {
-                var flashMessage = document.createElement('div');
-                flashMessage.className = 'fixed bottom-3 right-3 md:bottom-5 md:right-5 bg-black-500 text-white py-2 px-4 rounded-lg text-sm';
-                flashMessage.textContent = `Cancel Order ID : ${data.orderid}`;
-                document.body.appendChild(flashMessage);
-                alertSound.play(); // Play the alert sound
-                setTimeout(function() {
-                    document.body.removeChild(flashMessage);
-                }, 5000);
-            });
-
-            // Listener for master contract download events
-            socket.on('close_position', function(data) {
-                var flashMessage = document.createElement('div');
-                flashMessage.className = 'fixed bottom-3 right-3 md:bottom-5 md:right-5 bg-blue-500 text-white py-2 px-4 rounded-lg text-sm';
-                flashMessage.textContent = `Message: ${data.message}`;
-                document.body.appendChild(flashMessage);
-                alertSound.play(); // Play the alert sound
-                setTimeout(function() {
-                    document.body.removeChild(flashMessage);
-                }, 5000);
-            });
-    
-            
-            // Listener for order events (existing functionality)
-            socket.on('order_event', function(data) {
-                var bgColorClass = data.action.toUpperCase() === 'BUY' ? 'bg-green-500' : 'bg-red-500';
-                var flashMessage = document.createElement('div');
-                flashMessage.className = `fixed bottom-3 right-3 md:bottom-5 md:right-5 ${bgColorClass} text-white py-2 px-4 rounded-lg text-sm`;
-                flashMessage.textContent = `${data.action.toUpperCase()} Order Placed for Symbol: ${data.symbol}, Order ID: ${data.orderid}`;
-                document.body.appendChild(flashMessage);
-                alertSound.play(); // Play the alert sound
-                setTimeout(function() {
-                    document.body.removeChild(flashMessage);
-                }, 5000);
-            });
-        });
     
         // Functions for mobile menu toggle (existing functionality)
         function toggleMobileMenu() {
