--- a/templates/angel.html
+++ b/templates/angel.html
@@ -27,7 +27,7 @@
                 <input type="password" id="totp" name="totp" required class="mt-1 block w-full px-3 py-2 bg-gray-700 text-gray-300 border-gray-600 rounded-md shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-indigo-500">
             </div>
             <div class="flex items-center justify-center">
-                <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Authenticate</button>
+                <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Angel Login</button>
             </div>
             {% if error_message %}
             <div class="alert alert-danger" role="alert">
